--- a/Map(1.0)/Map/View/ParkingFinderTableViewCell.xib
+++ b/Map(1.0)/Map/View/ParkingFinderTableViewCell.xib
@@ -43,7 +43,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="r7D-Zd-8zb">
-                                <rect key="frame" x="142.66666666666666" y="0.0" width="72.666666666666657" height="54"/>
+                                <rect key="frame" x="142.66666666666666" y="0.0" width="72.666666666666657" height="56.333333333333336"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hzj-39-t9X">
                                         <rect key="frame" x="16.333333333333343" y="0.0" width="40" height="32"/>
@@ -52,16 +52,16 @@
                                             <constraint firstAttribute="height" constant="32" id="kRe-yA-ZKg"/>
                                         </constraints>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" image="car.rear" catalog="system">
+                                        <buttonConfiguration key="configuration" style="filled" image="bolt.car" catalog="system">
                                             <color key="baseBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reservation" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zxz-A7-XYi">
-                                        <rect key="frame" x="6.3333333333333428" y="42" width="60" height="12"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EV" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zxz-A7-XYi">
+                                        <rect key="frame" x="6.3333333333333428" y="42" width="60" height="14.333333333333336"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="aBp-jD-JjR"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -109,8 +109,8 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="bolt.car" catalog="system" width="128" height="95"/>
         <image name="car.front.waves.up" catalog="system" width="118" height="128"/>
-        <image name="car.rear" catalog="system" width="128" height="95"/>
         <image name="figure.roll" catalog="system" width="111" height="128"/>
     </resources>
 </document>
