--- a/Map(1.0)/Map/View/TableViewCell.xib
+++ b/Map(1.0)/Map/View/TableViewCell.xib
@@ -17,19 +17,25 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="tw3-g1-ZeG">
-                        <rect key="frame" x="10" y="20" width="409" height="60"/>
+                        <rect key="frame" x="10" y="10" width="409" height="80"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Location" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zcr-IZ-0Tr">
+                                <rect key="frame" x="0.0" y="0.0" width="96" height="29.333333333333332"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xGL-Te-Y1o">
-                                <rect key="frame" x="0.0" y="0.0" width="310" height="60"/>
+                                <rect key="frame" x="0.0" y="36.333333333333343" width="310" height="43.666666666666657"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="RpM-Ys-Ejc">
-                                        <rect key="frame" x="0.0" y="0.99999999999999645" width="40" height="58.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="0.33333333333333215" width="40" height="43"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="Eyv-Ao-KRY"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Found" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UvY-9F-Ob9">
-                                        <rect key="frame" x="50" y="0.0" width="260" height="60"/>
+                                        <rect key="frame" x="50" y="0.0" width="260" height="43.666666666666664"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="260" id="Mu5-gf-0ZN"/>
                                         </constraints>
@@ -47,14 +53,15 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="tw3-g1-ZeG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="8C1-HG-Ftv"/>
-                    <constraint firstAttribute="bottom" secondItem="tw3-g1-ZeG" secondAttribute="bottom" constant="20" id="aab-FQ-IYh"/>
+                    <constraint firstItem="tw3-g1-ZeG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="8C1-HG-Ftv"/>
+                    <constraint firstAttribute="bottom" secondItem="tw3-g1-ZeG" secondAttribute="bottom" constant="10" id="aab-FQ-IYh"/>
                     <constraint firstItem="tw3-g1-ZeG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="jf7-He-0jJ"/>
                     <constraint firstAttribute="trailing" secondItem="tw3-g1-ZeG" secondAttribute="trailing" constant="10" id="uZr-BE-1lF"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="title" destination="zcr-IZ-0Tr" id="mWh-2P-sQu"/>
                 <outlet property="userLocationLabel" destination="UvY-9F-Ob9" id="EUn-Zc-rII"/>
             </connections>
             <point key="canvasLocation" x="269" y="57"/>
